# score-addon-vmo

./: .gitmodules  CMakeLists.txt  README.md  score_addon_vmo.cpp  score_addon_vmo.hpp
Examples/: vmo.score
vmo/: CommandFactory.hpp  Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
vmo/detail/: vmo.cpp  vmo.h
